--- a/mono.cfg
+++ b/mono.cfg
@@ -1,4 +1,5 @@
 [Mono_settings]
+mono_system = single
 com_port = COM3
 speed = 20000
 approach_speed = 2000
@@ -6,5 +7,8 @@ offset = 30000
 nm_per_revolution = 2.6666666666666665
 steps_per_revolution = 36000
 current_grating = 1800
-current_wavelength = 603.7089532318712
+current_wavelength = 540.0
+
+[Laser_settings]
+laser_wavelength = 532.0
 
