--- a/mono.cfg
+++ b/mono.cfg
@@ -7,8 +7,9 @@ offset = 30000
 nm_per_revolution = 2.6666666666666665
 steps_per_revolution = 36000
 current_grating = 1800
-current_wavelength = 545.0
+current_wavelength = 517.0
 
 [Laser_settings]
-laser_wavelength = 532.0
+laser_wavelength = 530.79
+nm_per_px = 0.010619
 
